--- a/params.yaml
+++ b/params.yaml
@@ -2,8 +2,22 @@ data_ingestion:
   test_size: 0.2
 
 feature_engineering:
-  max_features: 100
+  vectorizer: "tfidf"  # Options: "tfidf" or "bow" (bag of words)
+  max_features: 500
+  # TF-IDF specific parameters
+  tfidf_params:
+    min_df: 2
+    max_df: 0.95
+    ngram_range: [1, 2]  # Include both unigrams and bigrams
+  # Bag of Words specific parameters
+  bow_params:
+    min_df: 2
+    max_df: 0.95
+    ngram_range: [1, 1]  # Only unigrams
 
 model_building:
   n_estimators: 25
   learning_rate: 0.1
+  max_depth: 5
+  min_samples_split: 2
+  min_samples_leaf: 1
